--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Compartment" />
-        <activity android:name=".Compartment1"></activity>
+        <activity android:name=".Compartment1" />
+        <activity android:name=".CoachSelection"></activity>
     </application>
 
 </manifest>
