--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rudra.ojas_for_tte">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +20,8 @@
         </activity>
         <activity android:name=".Compartment" />
         <activity android:name=".Compartment1" />
-        <activity android:name=".CoachSelection"></activity>
+        <activity android:name=".CoachSelection" />
+
     </application>
 
 </manifest>
