SQLite, Firebase work in Booking Activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
 
+}
+repositories {
+    mavenCentral()
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/'
+    }
 }
 
 dependencies {
@@ -37,6 +44,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation group: "com.twilio.sdk", name: "twilio", version: "7.29.0"
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.google.code.ksoap2-android:ksoap2-android:3.6.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
